--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,8 @@ spring:
     name: financial-tracker
   main:
     web-application-type: none
+
+application:
+  title: "Financial tracker"
+  width: 1280.0
+  height: 900.0
